# Argus

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  MEMORY_EVAL.md  Modelfile.qwen  README.md  RELEASE_NOTES_v1.9.md  SECOND_BRAIN_EXECUTION_PLAN.md  mcp_servers.json  pyproject.toml  requirements.txt  start.bat
.githooks/: commit-msg
.github/workflows/: ci.yml
agents/data-analyst/: AGENT.md
app/agent/: agent_demo.py  graph.py  research.py  research_state.py  state.py  summarize.py
app/brain/: __init__.py  backup.py  proposals.py  service.py  watcher.py  workflows.py
app/calendar/: store.py
app/core/: config.py  llm.py  llm_demo.py  logging_config.py  metrics.py  pricing.py  raw_openai_demo.py  sandbox.py
app/eval/: cases.py  runner.py
app/hooks/: builtin.py  registry.py  toolnode.py
app/mcp/: client.py  mcp_test.py
app/memory/: long_term.py  long_term_demo.py  memory_demo.py
app/rag/: chunker.py  hybrid.py  ingest_demo.py  loader.py  query_rewrite.py  rag_demo.py  rerank.py  retriever.py  semantic_chunker.py  store.py
app/skills/: loader.py  toolgate.py
app/subagents/: loader.py  registry.py
app/tools/: agent_tools.py  brain_tools.py  calendar_tools.py  graph_query.py  idea_tools.py  memory_tools.py  metrics_tools.py  os_tools.py  rag_tool.py  skill_tools.py  tavily_search.py  tools_demo.py  web_search.py
app/tools/custom/: __init__.py
app/tools/subagents/: loader.py  registry.py
app/web/: auth.py  conversations.py  index.html  model_manager.py  models_list.py  secrets_store.py  server.py  term.py  uploads.py  vault_writer.py
docker/: Dockerfile  docker-compose.yml
docker/init/: 01-extensions.sql
skills/brainstorm/: SKILL.md
skills/deep-research/: SKILL.md
skills/lab-upgrade/: SKILL.md
tests/: conftest.py  test_auth.py  test_brain.py  test_calendar.py  test_chunker.py  test_config.py  test_graph_loop.py  test_hooks.py  test_ideas.py  test_llm.py  test_model_manager.py  test_os_tools.py  test_pricing.py  test_rag_fusion.py  test_research.py  test_sandbox.py  test_secrets.py  test_skills.py  test_subagents.py  test_summarize.py  test_tavily_search.py  test_term_auth.py  test_toolgate.py  test_uploads.py  test_web_endpoints.py
(+24 files in other folders)
