[project]
name = "claude-desktop"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3,<2",
    "langchain-openai>=1.3,<2",
    "langgraph>=1.2,<2",
    "langchain-core>=1.4,<2",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "tiktoken>=0.8",
]

[dependency-groups]
dev = ["pytest>=8.3", "ruff>=0.7"]