[project]
name = "argus"
version = "1.4.0"
description = "Self-hosted, local-first agent workspace: LangGraph agent, RAG, Postgres memory, MCP, web UI."
requires-python = ">=3.11"
dependencies = [
    # LLM / agent framework
    "langchain>=1.3,<2",
    "langchain-core>=1.4,<2",
    "langchain-openai>=1.3,<2",
    "langchain-anthropic>=1.0",
    "langchain-google-genai>=3.0",
    "langchain-community>=0.4",
    "langchain-experimental>=0.3",
    "langgraph>=1.2,<2",
    "langgraph-checkpoint-sqlite>=3.1",
    "aiosqlite>=0.22",
    # RAG / vector store
    "langchain-postgres>=0.0.17",
    "psycopg[binary]>=3.3",
    "pgvector>=0.3",
    "sentence-transformers>=3.0",
    "pypdf>=6.0",
    "ddgs>=0.9",
    # MCP
    "langchain-mcp-adapters>=0.1",
    # web server
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.0",
    "python-multipart>=0.0.9",
    "bcrypt>=4.0",
    "itsdangerous>=2.0",
    "httpx>=0.27",
    # config / utils
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "tiktoken>=0.8",
    "cryptography>=43.0",
]

[dependency-groups]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.7"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# These modules must call load_dotenv() / set env vars before importing app
# modules that resolve settings at import time, and server.py registers the
# terminal route via a deliberate late import — all legitimate E402.
"app/web/server.py" = ["E402"]
"app/eval/runner.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
